--- a/web/WEB-INF/shiro.ini
+++ b/web/WEB-INF/shiro.ini
@@ -1,19 +1,29 @@
 [main]
+jdbcRealm= org.apache.shiro.realm.jdbc.JdbcRealm
+jdbcRealm.authenticationQuery = SELECT password from agents where username = ?
+;jdbcRealm.userRolesQuery = SELECT role from userroles where userID = (select id FROM user WHERE username = ?)
+;jdbcRealm.permissionsQuery  = ??????
+
+ds = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+ds.serverName = localhost
+ds.user = root
+;ds.password = shiro
+ds.databaseName = litrealty
+jdbcRealm.dataSource= $ds
+
+passwordMatcher = org.apache.shiro.authc.credential.Sha256CredentialsMatcher
+credentialsMatcher = org.apache.shiro.authc.credential.HashedCredentialsMatcher
+credentialsMatcher.hashAlgorithmName = SHA-256
+credentialsMatcher.storedCredentialsHexEncoded = true
+credentialsMatcher.hashIterations = 5000
+
 authc.loginUrl = /login.jsp
 authc.usernameParam = username
 authc.passwordParam = password
 authc.rememberMeParam = rememberMe
-authc.successUrl = /AdminIndex
+authc.successUrl = IndexServlet
 logout.redirectUrl = /login.jsp
-;jdbcRealm.permissionsQuery  = select permission from userpermission where userID = (select id FROM user WHERE username = ?)
 
-[users]
-root = rootpass, admin
-alan = alanpass, lecturer
-tomc = tompass, statistician
-
-;This section allows you to use a name/value pair syntax to tell shiro how to filter request 
-;for any given URL path. All paths in [urls] are relative to the web application
 [urls]
 ;whenever Shiro sees a request to the /login.jsp url, enable the Shiro authc filter during the request
 /login.jsp = authc 
