--- a/web/WEB-INF/shiro.ini
+++ b/web/WEB-INF/shiro.ini
@@ -21,7 +21,7 @@ authc.loginUrl = /login.jsp
 authc.usernameParam = username
 authc.passwordParam = password
 authc.rememberMeParam = rememberMe
-authc.successUrl = IndexServlet
+authc.successUrl = LoginServlet
 logout.redirectUrl = /login.jsp
 
 [urls]
